--- a/index.html
+++ b/index.html
@@ -1,29 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles/main.css">
-  <title>Magnum TV</title>
-</head>
-<body>
-  <main id="content"></main>
-
-  <script src="./scripts/main.js"></script>
-</body>
-</html>
-
-
-
-<!DOCTYPE html>
-<html>
   <head>
-    <title>Magnum TV</title>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles/main.css" />
+    <title>Magnum TV</title>
   </head>
-
   <body>
-    
+    <h1>Magnum TV</h1>
+    <main id="content"></main>
+
+    <script type="module" src="./scripts/main.js" ></script>
   </body>
 </html>
